fixed some spacing

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -209,7 +209,8 @@ body{
 }
 
 .service-bottom-box{
-    width: 50%;
+    width: 47%;
+    margin-right: 2%;
 }
 
 .service-bottom-box ul{
